# android_openssl

./: .gitignore  CMakeLists.txt  README.md  android_openssl.cmake  build_ssl.sh  openssl.pri
no-asm/ssl_1.1/include/openssl/: opensslconf.h
no-asm/ssl_1.1/x86/: include
no-asm/ssl_3/include/openssl/: configuration.h
no-asm/static/include/openssl/: opensslconf.h
ssl_3/include/openssl/: configuration.h
ssl_3/x86_64/: include
tst_openssl/: CMakeLists.txt  tst_openssl.cpp  tst_openssl.pro
